--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="head">
         <!-- Navigation -->
         <nav>
             <!-- Logo -->
