--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Navigation -->
         <nav>
             <!-- Logo -->
-            <img src="" alt="logo" id="logoimg">
+            <img src="Assets/ChatGPT Image 16 déc. 2025, 15_40_20.png" alt="logo" id="logoimg">
             <!-- nav : acceuil, avantage, produit, services, temoignages -->
             <div>
                 <ul>
@@ -31,15 +31,21 @@
     </header>
     <main>
         <!-- Section avantage -->
-        <section id="adventages">
+        <section id="avantages">
+            
 
         </section>
         <!-- Section produits -->
         <section id="products">
+            <div class="text-activity">
+                <strong>Events</strong>
+                <h2>Activités</h2>
+                <p>Les évenements que vous pouvez profiter</p>
+            </div>
 
         </section>
         <!-- Section services -->
-        <section id="services">
+        <section id="events">
 
         </section>
         <!-- Section Temoignages -->
