last push for the day

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Navigation -->
         <nav>
             <!-- Logo -->
-            <img src="Assets/ChatGPT Image 16 déc. 2025, 15_40_20.png" alt="logo" id="logoimg">
+            <img src="Assets/ChatGPT Image 16 déc. 2025, 16_26_49.png" alt="logo" id="logoimg">
             <!-- nav : acceuil, avantage, produit, services, temoignages -->
             <div>
                 <ul>
@@ -28,6 +28,9 @@
             <!-- Button -->
             <a href=""><p>Appeler</p></a>
         </nav>
+        <div id="backgroundImage">
+
+        </div>
     </header>
     <main>
         <!-- Section avantage -->
