--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
         <!-- Navigation -->
         <nav>
             <!-- Logo -->
-            <img src="Assets/ChatGPT Image 16 déc. 2025, 16_26_49.png" alt="logo" id="logoimg">
+            <img src="Assets/ChatGPT Image 17 déc. 2025, 10_34_13.png" alt="logo" id="logoimg">
             <!-- nav : acceuil, avantage, produit, services, temoignages -->
             <div>
                 <ul>
                     <li><a href="">Acceuil</a></li>
                     <li><a href="">Avantage</a></li>
-                    <li><a href="">Produits</a></li>
-                    <li><a href="">Services</a></li>
+                    <li><a href="">Evenements</a></li>
                     <li><a href="">Temoignages</a></li>
                 </ul>
             </div>
             <!-- Button -->
-            <a href=""><p>Appeler</p></a>
+            <a href="" id="Contact">Contact</a>
         </nav>
         <div id="backgroundImage">
 
@@ -59,19 +58,18 @@
     <footer>
         <div>
             <!-- Logo -->
-            <img src="" alt="Logo" id="logoFooter">
+            <img src="Assets/ChatGPT Image 17 déc. 2025, 10_33_44.png" alt="Logo" id="logoFooter">
             <div>
                 <ul>
-                    <li><a href="">lien</a></li>
-                    <li><a href="">lien</a></li>
-                    <li><a href="">lien</a></li>
-                    <li><a href="">lien</a></li>
-                    <li><a href="">lien</a></li>
+                    <li><a href="">Acceuil</a></li>
+                    <li><a href="">Avantage</a></li>
+                    <li><a href="">Evenements</a></li>
+                    <li><a href="">Témoignages</a></li>
                 </ul>
             </div>
         </div>
         <!-- fix that later -->
-        <strong id="companyName"></strong>
+        <strong id="companyName">Escape GameZ</strong>
         <!-- Very bottom -->
         <div>
             <p>@All Rights to Michael Brown</p>
