--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
         <!-- Section produits -->
         <section id="products">
             <div class="text-activity">
-                <strong>Events</strong>
-                <h2>Activités</h2>
-                <p>Les évenements que vous pouvez profiter</p>
+                <h2>Nos événements</h2>
+                <p>Les évenements que on vous propose</p>
             </div>
 
         </section>
