--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </section>
         <!-- Section Temoignages -->
          <section id="witness">
-
+            <h2>Avis</h2>
          </section>
     </main>
     <footer>
         <div>
             <!-- Logo -->
-            <img src="Assets/ChatGPT Image 17 déc. 2025, 10_33_44.png" alt="Logo" id="logoFooter">
+            <img src="Assets/ChatGPT Image 17 déc. 2025, 10_34_13.png" alt="Logo" id="logoFooter">
             <div>
                 <ul>
                     <li><a href="">Acceuil</a></li>
@@ -73,10 +73,10 @@
         <div>
             <p>@All Rights to Michael Brown</p>
             <div>
-                <ul>
-                    <li>lorem ipsum</li>
-                    <li>morem nipsum</li>
-                    <li>nara ipsul</li>
+                <ul class="cc">
+                    <li>Politique de confidentialité</li>
+                    <li>Condition d'utilisation</li>
+                    <li>Parametres des cookies</li>
                 </ul>
             </div>
         </div>
