push of thursday

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <!-- Section Temoignages -->
          <section id="witness">
             <h2>Avis</h2>
+            <p>Les témoinages des gens</p>
          </section>
     </main>
     <footer>
