--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             </div>
         </div>
         <!-- fix that later -->
-        <strong id="companyName">Escape GameZ</strong>
+         <div id="companyName"><strong>Dehors!</strong></div>
+        
         <!-- Very bottom -->
         <div>
             <p>@All Rights to Michael Brown</p>
