--- a/reserve.html
+++ b/reserve.html
@@ -21,15 +21,17 @@
                 <ul>
                     <li><a href="index.html">Acceuil</a></li>
                     <li><a href="index.html#avantages">Avantage</a></li>
-                    <li><a href="#products">Evenements</a></li>
-                    <li><a href="#witness">Temoignages</a></li>
+                    <li><a href="index.html#products">Evenements</a></li>
+                    <li><a href="index.html#witness">Temoignages</a></li>
                 </ul>
             </div>
             <!-- Button -->
             <a href="" id="Contact">Contact</a>
         </nav>
         <div id="backgroundImage">
-
+            <h1>Dehors! - Escape Game Paris</h1>
+            <p>Découvrez l'aventure ultime avec Dehors!, votre destination d'escape game à Paris</p>
+           <div class="buttons"><a href="#reserveThis">Réservez votre aventure</a></div> 
         </div>
     </header>
     <main>
@@ -84,7 +86,8 @@
             </div>
         </div>
         <!-- fix that later -->
-        <strong id="companyName">Escape GameZ</strong>
+         <div id="companyName"><strong>Dehors!</strong></div>
+        
         <!-- Very bottom -->
         <div>
             <p>@All Rights to Michael Brown</p>
