--- a/reserve.html
+++ b/reserve.html
@@ -42,7 +42,7 @@
                     <p class="price">€50</p>
                     <div class="quantité">
                         <span>👤</span>
-                        <input type="number" name="people" id="quantity" placeholder="2 personnes">
+                        <input type="number" name="people" id="quantity" placeholder="2 personnes" min="2" max="10">
                     </div>
                 </div>
 
@@ -52,7 +52,7 @@
                     <p class="price">€60</p>
                     <div class="quantité">
                         <span>👤</span>
-                        <input type="number" name="people" id="quantity" placeholder="2 personnes">
+                        <input type="number" name="people" id="quantity" placeholder="2 personnes" min="2" max="10">
                     </div>
                 </div>
 
@@ -62,7 +62,7 @@
                     <p class="price">€70</p>
                     <div class="quantité">
                         <span>👤</span>
-                        <input type="number" name="people" id="quantity" placeholder="2 personnes">
+                        <input type="number" name="people" id="quantity" placeholder="2 personnes" min="2" max="10">
                     </div>
                 </div>
             </div>
